# tda-persistence-explorer

./: .gitignore  .travis.yaml  .travis.yml  LICENSE  README.md  explorer.html  install.sh
.install/: build.sh  cimg.sh  parse.sh  phat.sh
data/pd_sub/: 00001__sub_all.csv  00002__sub_all.csv  00003__sub_all.csv  00004__sub_all.csv  00005__sub_all.csv  00006__sub_all.csv  00007__sub_all.csv  00008__sub_all.csv  00009__sub_all.csv  00010__sub_all.csv  00011__sub_all.csv  00012__sub_all.csv  00013__sub_all.csv  00014__sub_all.csv  00015__sub_all.csv  00016__sub_all.csv  00017__sub_all.csv  00018__sub_all.csv  00019__sub_all.csv  00020__sub_all.csv
data/pd_sup/: 00001__super_all.csv  00002__super_all.csv  00003__super_all.csv  00004__super_all.csv  00005__super_all.csv  00006__super_all.csv  00007__super_all.csv  00008__super_all.csv  00009__super_all.csv  00010__super_all.csv  00011__super_all.csv  00012__super_all.csv  00013__super_all.csv  00014__super_all.csv  00015__super_all.csv  00016__super_all.csv  00017__super_all.csv  00018__super_all.csv  00019__super_all.csv  00020__super_all.csv
doc/: Tutorial.ipynb  Tutorial2.ipynb  superlevel_filtration_stitch_with_rips.ipynb
phat_persistence_from_image/: 2d_pic_to_bd_matrix.cpp  Makefile  README.md  pointer_test.cpp  preprocess_image.cpp
source/: JupyterD3.py  PersistenceExplorer.css  PersistenceExplorer.js  Tutorial.ipynb
source/DataPersistence/: CMakeLists.txt  CartesianProduct.h  CubicalCell.h  CubicalComplex.h  Data.h  DataPersistence.cpp  (+7 more)
source/DataPersistence/source/: CMakeLists.txt  DataPersistence.cpp
(+18 files in other folders)
